GENT-647 - Re-added the directory XSD2PHP and its contents, re-added xsd2php.php. Updated composer.json to contain include-path

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require-dev": {
         "phpunit/phpunit": "^5.7"
     },
+    "include-path":["src/XSD2PHP/lib/ZF/1.10.7/"],
     "autoload": {
         "psr-4": {
             "QuickBooksOnline\\API\\": "src/"
